2005-03-03 Vladimir Hirsl
	Small change for enabling generation of path entry container change events.
	* model/org/eclipse/cdt/core/model/PathEntryContainerChanged.java
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java

2005-03-02 Alain Magloire
	Fix PR 84527: PathEntryManager marker jobs were start to often.
	* model/org/eclipse/cdt/internla/core/model/PathEntrymanager.java

2005-03-02 Alain Magloire
	Fix for PR 85043: NPE when calling Ar.isARHeader(null);
	* utils/org/eclipse/cdt/utils/elf/AR.java
	* utils/org/eclipse/cdt/utils/macho/AR.java
	* utils/org/elcipse/cdt/utils/som/AR.java
	* utils/org/eclipse/cdt/utils/xcoff/AR.java

2005-02-24 Alain Magloire
	Part of 79596
	* model/org/eclipse/cdt/internal/core/model/PathEntryManager.java
	* plugin.properties
	
2005-02-21 Alain Magloire
	Adapt the ResolverModel code to the IContentTypeManager.
	* src/orgeclipse/cdt/core/internal/filetype/ResolverModel.java

2005-02-16 Alain Magloire
	Fix for PR 85625, The IBinary info were not remove in the cache.
	* model/org/eclipse/cdt/internal/core/model/DeltaProcessor.java

2004-03-04 Peter Faltaous
	Add e_machine values for X86_64.
	getAttributes(): Add cases for X86_64.
	This fixes the debug configurations dialog which
	otherwise states that no debugger is available.

 	* utils/org/eclipse/cdt/utils/elf/Elf.java:
2005-02-16 Alain Magloire
	Fix PR 74034
	* utils/org/eclipse/cdt/utils/elf/Elf.java

2005-02-15 Alain Magloire
	Fix PR 82856
	* model/org/eclipse/cdt/core/model/IDeclaration.java
	* model/org/eclipse/cdt/core/model/IMacro.java
	* model/org/eclipse/cdt/core/model/IMember.java
	* model/org/eclipse/cdt/core/model/IMethod.java
	* model/org/eclipse/cdt/core/model/INamespace.java
	* model/org/eclipse/cdt/core/model/IStructure.java
	* model/org/eclipse/cdt/core/model/IVariable.java
	* model/org/eclipse/cdt/core/model/IVariableDeclaration.java

2005-02-14 Alain Magloire
	Part of 79596
	* model/org/eclipse/cdt/core/model/CoreModel.java